--- a/Nature-Spots/package.json
+++ b/Nature-Spots/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "cloudinary": "^1.30.0",
+    "bootstrap": "^5.2.3",
+    "cloudinary": "^1.37.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
@@ -20,6 +21,5 @@
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
     "serve-favicon": "^2.5.0"
-  },
-  "devDependencies": {}
+  }
 }
