--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-PORT= 3000
+PORT=3000
+SESSION_SECRET='keyboard cat'
+CLOUDINARY_NAME=dloaaeq25
+CLOUDINARY_KEY=411235422382153
+CLOUDINARY_SECRET=V-8puMm3AcfhUW_2hzwmMzmtyZs
+MONGODB_URI=mongodb+srv://chikifella:2arwnm4fKLD9fxOI@nature-project.hni8j7z.mongodb.net/?retryWrites=true&w=majority
